--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         document.title="hi! :)";
     }
 }
+function a() {
 await new Promise(r => setTimeout(r, 1000));
 // Add event listeners for visibility changes
-document.addEventListener("visibilitychange", handleVisibilityChange)</script>
+document.addEventListener("visibilitychange", handleVisibilityChange);}
+a();</script>
 </html>
