--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         document.title="hi! :)";
     }
 }
-function a() {
+async function a() {
 await new Promise(r => setTimeout(r, 1000));
 // Add event listeners for visibility changes
 document.addEventListener("visibilitychange", handleVisibilityChange);}
