--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         document.title="hi! :)";
     }
 }
-async function a() {
-await new Promise(r => setTimeout(r, 1000));
+
 // Add event listeners for visibility changes
-document.addEventListener("visibilitychange", handleVisibilityChange);}
-a();</script>
+document.addEventListener("visibilitychange", handleVisibilityChange);</script>
 </html>
